Fixed dark mode of the loginbox iframe;

--- a/packages/chat-app/src/app/App.css
+++ b/packages/chat-app/src/app/App.css
@@ -9,3 +9,7 @@
 .dark {
   color-scheme: dark;
 }
+
+.dark iframe {
+  color-scheme: auto;
+}
