--- a/packages/feed-app/src/app/App.css
+++ b/packages/feed-app/src/app/App.css
@@ -9,3 +9,6 @@
 .dark {
   color-scheme: dark;
 }
+.dark iframe {
+  color-scheme: auto;
+}
