--- a/packages/public-app/src/app/App.css
+++ b/packages/public-app/src/app/App.css
@@ -5,3 +5,7 @@
 .dark {
   color-scheme: dark;
 }
+
+.dark iframe {
+  color-scheme: auto;
+}
